force-app/main/default/objects/Provider_Type__c/Provider_Type__c.object-meta.xml
<CustomObject>
    <description>MDIRO Provider Types</description>
    <label>Reference Data Configuration</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Reference Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>