force-app/main/default/objects/Provider_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalId>true</externalId>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>