force-app/main/default/objects/Provider_Type__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>15</length>
    <type>Text</type>
</CustomField>